--- a/package.json
+++ b/package.json
@@ -48,8 +48,9 @@
   },
   "lint-staged": {
     "*.js": [
-      "npm run lint:fix",
-      "git add"
+      "git add .",
+      "npm run lint:fix"
+
     ]
   }
 }
